// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. landscape default modal 1`] = `
<View>
  <Modal />
  <View>
    <View
      style={
        Object {
          "aspectRatio": 2,
          "backgroundColor": "#EDEDED",
          "borderRadius": 0,
          "overflow": "hidden",
          "width": "100%",
        }
      }
    >
      <Image
        style={
          Object {
            "borderRadius": 0,
            "bottom": 0,
            "height": undefined,
            "left": 0,
            "position": "absolute",
            "resizeMode": "center",
            "right": 0,
            "top": 0,
            "width": "100%",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`2. portrait default modal 1`] = `
<View>
  <Modal />
  <View>
    <View
      style={
        Object {
          "aspectRatio": 0.5,
          "backgroundColor": "#EDEDED",
          "borderRadius": 0,
          "overflow": "hidden",
          "width": "100%",
        }
      }
    >
      <Image
        style={
          Object {
            "borderRadius": 0,
            "bottom": 0,
            "height": undefined,
            "left": 0,
            "position": "absolute",
            "resizeMode": "center",
            "right": 0,
            "top": 0,
            "width": "100%",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`3. tablet landscape default modal 1`] = `
<View>
  <Modal />
  <View>
    <View
      style={
        Object {
          "aspectRatio": 2,
          "backgroundColor": "#EDEDED",
          "borderRadius": 0,
          "overflow": "hidden",
          "width": "100%",
        }
      }
    >
      <Image
        style={
          Object {
            "borderRadius": 0,
            "bottom": 0,
            "height": undefined,
            "left": 0,
            "position": "absolute",
            "resizeMode": "center",
            "right": 0,
            "top": 0,
            "width": "100%",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`4. tablet portrait default modal 1`] = `
<View>
  <Modal />
  <View>
    <View
      style={
        Object {
          "aspectRatio": 0.5,
          "backgroundColor": "#EDEDED",
          "borderRadius": 0,
          "overflow": "hidden",
          "width": "100%",
        }
      }
    >
      <Image
        style={
          Object {
            "borderRadius": 0,
            "bottom": 0,
            "height": undefined,
            "left": 0,
            "position": "absolute",
            "resizeMode": "center",
            "right": 0,
            "top": 0,
            "width": "100%",
          }
        }
      />
    </View>
  </View>
</View>
`;
